<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="flights">Flights</string>
    <string name="space_station">Space Station</string>
    <string name="rovers">Rovers</string>
    <string name="mars">MARS</string>
    <string name="dca">DCA</string>
    <string name="one_way">One Way</string>
    <string name="_1_traveller">1 Traveller</string>
    <string name="todo">TODO</string>
</resources>