<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="94dp"
        android:layout_height="84dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/spacestation" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/rocket" />


    <ImageView
        android:layout_width="113dp"
        android:layout_height="90dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/exomars_rover_big" />

    <ImageView
        android:layout_width="135dp"
        android:layout_height="112dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_baseline_compare_arrows_24" />

    <TextView
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/space_station"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="100dp"
        android:layout_marginEnd="146dp"
        android:text="@string/flights"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="100dp"
        android:layout_marginEnd="-10dp"
        android:text="@string/rovers"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="127dp"
        android:layout_height="108dp"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="300dp"
        android:layout_marginEnd="13dp"
        android:background="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="330dp"
        android:layout_marginStart="240dp"
        android:layout_marginEnd="200dp"
        android:text="@string/mars"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="127dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="300dp"
        android:layout_marginStart="9dp"
        android:background="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="330dp"
        android:layout_marginStart="35dp"
        android:layout_marginRight="100dp"
        android:text="@string/dca"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="450dp"
        android:layout_marginStart="15dp"
        android:background="@color/orange"
        android:text="@string/one_way"
        android:textColor="#5D4037"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="103dp"
        android:layout_height="34dp"
        android:layout_marginVertical="455dp"
        android:layout_marginStart="110dp"
        android:src="@drawable/ic_baseline_radio_button_checked_24"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="520dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="100dp"
        android:background="@color/orange"
        android:text="@string/_1_traveller"
        android:textColor="#5D4037"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</RelativeLayout>


